The site always has a scroll bar on the right, to prevent page-jumping

--- a/Source/Client/Showcase.Client.App/Content/main.css
+++ b/Source/Client/Showcase.Client.App/Content/main.css
@@ -1,4 +1,8 @@
-﻿.toast-top-center {
+﻿html {
+    overflow-y: scroll; 
+}
+
+.toast-top-center {
     margin-top: 150px;
     text-align: center;
 }
